ATUALIZADO SALDO DE ITEM NO HISTII
